--- a/AngleBorn/AngleBorn.csproj
+++ b/AngleBorn/AngleBorn.csproj
@@ -66,7 +66,7 @@
     <Compile Include="World\MapManager.cs" />
     <Compile Include="World\Tiles\BaseTile.cs" />
     <Compile Include="World\Tiles\CityTile.cs" />
-    <Compile Include="World\Tiles\HouseTile.cs" />
+    <Compile Include="World\Tiles\Dungeon.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
