--- a/AngleBorn/AngelBorn.csproj
+++ b/AngleBorn/AngelBorn.csproj
@@ -73,6 +73,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Items\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
