Made dungeons traveling from and to work and started working on enemies

--- a/AngleBorn/AngelBorn.csproj
+++ b/AngleBorn/AngelBorn.csproj
@@ -50,7 +50,7 @@
     <Compile Include="Menus\PlayManager.cs" />
     <Compile Include="Player\Abilities\BaseAbilites.cs" />
     <Compile Include="Player\Cursor.cs" />
-    <Compile Include="Player\Inventory\PlayerInventory.cs" />
+    <Compile Include="Player\Inventory\InventoryManager.cs" />
     <Compile Include="Player\Movement.cs" />
     <Compile Include="Player\PlayerClass\PlayerClass.cs" />
     <Compile Include="Player\PlayerController.cs" />
