--- a/AngleBorn/AngelBorn.csproj
+++ b/AngleBorn/AngelBorn.csproj
@@ -46,6 +46,9 @@
     <Compile Include="Grapihcs\DrawInfoBox.cs" />
     <Compile Include="Grapihcs\DrawStats.cs" />
     <Compile Include="Grapihcs\MapDraw.cs" />
+    <Compile Include="Items\BaseItem.cs" />
+    <Compile Include="Items\ItemManager.cs" />
+    <Compile Include="Items\WeaponItem.cs" />
     <Compile Include="Menus\IntroMenu.cs" />
     <Compile Include="Menus\PlayManager.cs" />
     <Compile Include="Player\Abilities\BaseAbilites.cs" />
@@ -75,8 +78,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Items\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
