--- a/AngleBorn/AngelBorn.csproj
+++ b/AngleBorn/AngelBorn.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Grapihcs\CombatDraw.cs" />
     <Compile Include="Grapihcs\DrawInfoBox.cs" />
     <Compile Include="Grapihcs\DrawStats.cs" />
+    <Compile Include="Grapihcs\InventoryDraw.cs" />
     <Compile Include="Grapihcs\MapDraw.cs" />
     <Compile Include="Items\ArmorItem.cs" />
     <Compile Include="Items\BaseItem.cs" />
