--- a/AngleBorn/AngelBorn.csproj
+++ b/AngleBorn/AngelBorn.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Grapihcs\MapDraw.cs" />
     <Compile Include="Items\ArmorItem.cs" />
     <Compile Include="Items\BaseItem.cs" />
+    <Compile Include="Items\ConsumableItem.cs" />
     <Compile Include="Items\EquippableItem.cs" />
     <Compile Include="Items\ItemManager.cs" />
     <Compile Include="Items\WeaponItem.cs" />
@@ -67,6 +68,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools\ConsoleWriter.cs" />
+    <Compile Include="Tools\InventoryList.cs" />
     <Compile Include="Tools\Setup.cs" />
     <Compile Include="Tools\SingleTon.cs" />
     <Compile Include="World\BaseCharacters.cs" />
