--- a/AngleBorn/AngelBorn.csproj
+++ b/AngleBorn/AngelBorn.csproj
@@ -60,7 +60,7 @@
     <Compile Include="Player\CombatManager.cs" />
     <Compile Include="Player\Cursor.cs" />
     <Compile Include="Player\Inventory\InventoryManager.cs" />
-    <Compile Include="Player\Movement.cs" />
+    <Compile Include="Player\Navigation.cs" />
     <Compile Include="Player\PlayerClass\PlayerClass.cs" />
     <Compile Include="Player\PlayerController.cs" />
     <Compile Include="Player\Race\PlayerRace.cs" />
@@ -68,7 +68,6 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools\ConsoleWriter.cs" />
-    <Compile Include="Tools\InventoryList.cs" />
     <Compile Include="Tools\Setup.cs" />
     <Compile Include="Tools\SingleTon.cs" />
     <Compile Include="World\BaseCharacters.cs" />
