Added some fluf to that map while making sure that the game wouldn't crash when not finding a monster on a note. Reworked the base for consumable effects and made it into delegates since it will create more space for expanding future features

--- a/AngleBorn/AngelBorn.csproj
+++ b/AngleBorn/AngelBorn.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Grapihcs\MapDraw.cs" />
     <Compile Include="Items\ArmorItem.cs" />
     <Compile Include="Items\BaseItem.cs" />
+    <Compile Include="Items\ConsumableEffects.cs" />
     <Compile Include="Items\ConsumableItem.cs" />
     <Compile Include="Items\EquippableItem.cs" />
     <Compile Include="Items\ItemManager.cs" />
